--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-language: node_js
- node_js: node
- services:
-     - mongodb
+llanguage: node_js
+node_js: node
+cache:
+  directories:
+    - node_modules
+env:
+  - CI=true
